<resources>
    <string name="app_name">EatWise</string>
    <string name="food_calculator">food calculator</string>
    <string name="sign_in">Sign in</string>
    <string name="sign_in_underlined"><u>Sign in</u></string>
    <string name="create_account">Create account</string>
    <string name="sign_up">Sign up</string>
    <string name="sign_up_underlined"><u>Sign up</u></string>
    <string name="password_hint">●●●●●●●●</string>
    <string name="example_gmail">example@gmail.com</string>
    <string name="do_not_have_an_account">Don\'t have an account yet?</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="continue_btn_text">Continue</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="weight_example">00.0</string>
    <string name="your_birth_date">Your birth date</string>
    <string name="your_weight">Your weight</string>
    <string name="sex">Sex</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="work_type">Do You have active or sedentary work</string>
    <string name="active">Active</string>
    <string name="sedentary">Sedentary</string>
    <string name="amount_of_trainings">Amount of trainings per week</string>
    <string name="consumed_calories">%.1f of %.1f</string>
    <string name="percentage">%.1f%%</string>
    <string name="calories">Calories</string>
    <string name="water">Water</string>
    <string name="litres">%.1fL</string>
    <string name="from_litres">%.1fL of %.1fL</string>
    <string name="grams">%.1fg</string>
    <string name="from_grams">%.1fg of %.1fg</string>
    <string name="proteins">Proteins</string>
    <string name="carbs">Carbs</string>
    <string name="fats">Fats</string>
    <string name="fiber">Fiber</string>
    <string name="sugar">Sugar</string>
    <string name="salt">Salt</string>
    <string name="consumed_today">Hello, this is what You \n have consumed today</string>
    <string name="consumption">Consumption</string>
    <string name="food">Food</string>
    <string name="user_page">User page</string>

    <string name="food_list_desc">%s (100g)</string>
    <string name="food_list_calories">%.1f cal</string>
    <string name="food_list_protein">Protein: %.1fg</string>
    <string name="food_list_carbs">Carbs: %.1fg</string>
    <string name="food_list_fat">Fat: %.1fg</string>
    <string name="food_list_water">Water: %.1fml</string>
    <string name="food_list_fiber">Fiber: %.1fg</string>
    <string name="food_list_sugar">Sugar: %.1fg</string>
    <string name="food_list_salt">Salt: %.1fmg</string>

    <string name="search_for_et">Search…</string>
    <string name="search">Search</string>
    <string name="food_list">Food list</string>
    <string name="refresh">Refresh</string>
    <string name="error_msg">Something went wrong! Check Your \ninternet connection and try again.</string>
    <string name="personal_page">Personal page</string>
    <string name="weight_maintenance">Weight maintenance</string>
    <string name="weight_maintenance_desc">Is a diet plan that is designed to help individuals maintain their current body weight.</string>
    <string name="weight_gain">Weight gain</string>
    <string name="weight_gain_desc">Is a diet plan designed to help individuals increase their body weight, specifically by building muscle mass.</string>
    <string name="weight_loss">Weight loss</string>
    <string name="weight_lose_desc">Is a diet plan designed to help individuals lose weight.</string>
    <string name="cutting_diet">Cutting diet</string>
    <string name="cutting_diet_desc">Is a diet plan that is designed to help individuals lose body fat while maintaining muscle mass.</string>
    <string name="diets_title">In accordance to Your lifestyle we recommend You these diets:</string>
    <string name="choose_your_diet_plan">Choose Your diet plan:</string>
    <string name="save">Save</string>
    <string name="add">Add</string>

    <string name="dialog_water_title_template">Today you consumed %.1fL of %s, this is %.1f%% from your daily norm</string>
    <string name="dialog_title_template">Today you consumed %.1fg of %s, this is %.1f%% from your daily norm</string>
    <string name="dialog_subtitle_template">Here you can manually add how many %s you have consumed</string>

    <string name="dialog_water_note">Note: when we talk about water, we talk about
        other liquids too. So, if you have drunk milk, or ate
        a tomato, you may also add it to consumed water.
        But it would be better if at least half of all consumed
        liquids were water
    </string>

    <string name="dialog_protein_note">Note: when discussing protein,
        it\'s important to prioritize a diverse range of protein sources
        in your diet. Incorporating lean meats, fish, poultry, legumes, nuts,
        and dairy products can help ensure an adequate protein intake.
        By diversifying your protein sources, you can provide your body with a
        wider array of essential amino acids and nutrients for optimal health.
    </string>

    <string name="dialog_carb_note">Note: carbohydrates are important for energy.
        Include a variety of whole grains, fruits, vegetables, and legumes for
        essential fiber and nutrients. Choose minimally processed carbs and avoid
        excessive refined sugars and grains.
    </string>

    <string name="dialog_fat_note">Note: healthy fats are important for overall health.
        Unsaturated fats, particularly monounsaturated and polyunsaturated fats,
        are considered better choices for overall health. These can be found in
        foods such as avocados, nuts, seeds, olive oil, fatty fish (like salmon and trout),
        and plant-based oils like canola and sunflower oil. Avoid excessive intake of saturated
        and trans fats found in processed foods.
    </string>

    <string name="dialog_fiber_note">Note: fiber is essential for a healthy diet.
        Choose whole grains, fruits, vegetables, legumes, and nuts for fiber intake.
        It aids digestion, promotes regularity, and helps control blood sugar levels.
        Gradually increase fiber intake and stay hydrated for optimal results.
    </string>

    <string name="dialog_sugar_note">Note: sugar consumption should be moderated for
        overall health. Limit intake of added sugars found in processed foods, sugary
        beverages, and desserts. Instead, focus on natural sugars from fruits. Be mindful
        of hidden sugars in packaged foods and opt for healthier alternatives.
    </string>

    <string name="dialog_salt_note">Note: limit salt intake by reducing added salt and
        choosing fresh, whole foods. Processed foods are often high in sodium, so minimize
        their consumption for better salt regulation and overall health.
    </string>

    <string name="g">(g)</string>
    <string name="ml">(ml)</string>
    <string name="favorite">Favorite</string>
    <string name="own_food">Own food</string>
    <string name="nutrients">Nutrients</string>
    <string name="add_your_own_food">Add Your own food</string>
    <string name="food_name">Food name</string>
    <string name="yesterday_you_consumed">Yesterday you consumed:</string>

</resources>