<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/foodListTitle"
        style="@style/consumedScreenTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="25dp"
        android:layout_marginTop="25dp"
        android:text="@string/food_list" />

    <LinearLayout
        android:id="@+id/menu_layout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="25dp"
        android:layout_marginTop="25dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/search_tb"
            style="@style/personalPageTitlesText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/search" />

        <TextView
            android:id="@+id/favorite_tb"
            style="@style/radioButtonPersonalPageStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="25dp"
            android:text="@string/favorite" />

        <TextView
            android:id="@+id/own_tb"
            style="@style/personalPageTitlesText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="25dp"
            android:text="@string/own_food" />
    </LinearLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/favoriteFoodRecyclerView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="12.5dp"
        android:layout_marginBottom="55dp"
        android:clipToPadding="false"
        android:paddingBottom="34dp"/>


</LinearLayout>